--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+	<string name="action_settings"></string>
     <string name="app_name">"Android "</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="info_title">JSON</string>
+    <string name="button_title">Start!</string>
+    <string name="table_title">User Profile</string>
+	<string name="ProgressBar_message">Loading...</string>
 </resources>
